--- a/Backend/fastapi_app/requirements.txt
+++ b/Backend/fastapi_app/requirements.txt
@@ -3,3 +3,5 @@ uvicorn[standard]==0.30.1
 SQLAlchemy==2.0.29
 psycopg[binary]==3.1.18
 alembic==1.13.2
+passlib[bcrypt]==1.7.4
+bcrypt>=4.0.1,<5.0.0
