--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,9 @@ services:
     command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
     restart: unless-stopped
     environment:
-      DATABASE_URL: ${DATABASE_URL:-postgresql+psycopg://postgres:postgres@db:5432/mealplanner}
+      DATABASE_URL: postgresql+psycopg://postgres:postgres@db:5432/mealplanner
       OPENAI_API_KEY: ${OPENAI_API_KEY:-}
+      ENSURE_SCHEMA_ON_STARTUP: "true"
     volumes:
       - ./Backend/fastapi_app:/app
     ports:
