--- a/Backend/fastapi_app/requirements.txt
+++ b/Backend/fastapi_app/requirements.txt
@@ -4,6 +4,6 @@ SQLAlchemy==2.0.29
 psycopg[binary]==3.1.18
 alembic==1.13.2
 passlib[bcrypt]==1.7.4
-bcrypt>=4.0.1,<5.0.0
+bcrypt==4.1.2
 openai>=1.37.0,<2.0.0
 itsdangerous==2.1.2
