--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,19 @@
 version: "3.9"
 
 services:
-  db:
-    image: postgres:16
-    restart: unless-stopped
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
-      POSTGRES_DB: ${POSTGRES_DB:-mealplanner}
-    volumes:
-      - db_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
   backend:
     build:
       context: ./Backend/fastapi_app
     command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
     restart: unless-stopped
     environment:
-      DATABASE_URL: postgresql+psycopg://postgres:postgres@db:5432/mealplanner
+      DATABASE_URL: ${DATABASE_URL}
       OPENAI_API_KEY: ${OPENAI_API_KEY:-}
-      ENSURE_SCHEMA_ON_STARTUP: "true"
+      ENSURE_SCHEMA_ON_STARTUP: "false"
     volumes:
       - ./Backend/fastapi_app:/app
     ports:
       - "8000:8000"
-    depends_on:
-      db:
-        condition: service_healthy
 
   frontend:
     build:
@@ -51,5 +31,4 @@ services:
       - backend
 
 volumes:
-  db_data:
   frontend_node_modules:
