--- a/Backend/fastapi_app/requirements.txt
+++ b/Backend/fastapi_app/requirements.txt
@@ -2,10 +2,9 @@ fastapi==0.111.0
 uvicorn[standard]==0.30.1
 SQLAlchemy==2.0.29
 psycopg[binary]==3.1.18
-passlib[bcrypt]==1.7.4
-bcrypt==4.1.2
+PyJWT==2.8.0
+cryptography==42.0.8
 openai>=1.37.0,<2.0.0
-itsdangerous==2.1.2
 pandas==2.2.2
 pyarrow==16.1.0
 googletrans==4.0.2
