--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,9 @@ services:
   frontend:
     build:
       context: ./Frontend
+      args:
+        VITE_API_URL: ${VITE_API_URL:-http://localhost:8000}
+        VITE_CLERK_PUBLISHABLE_KEY: ${VITE_CLERK_PUBLISHABLE_KEY:-}
     command: >
       sh -c "npm install && npm run dev -- --host 0.0.0.0 --port 5173"
     environment:
