--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,10 @@ Frontend/.env
 
 # OS files
 .DS_Store
+
+#LLMS
+.claude
+
+# MCP servers virtual environments
+mcp-servers/**/venv/
+mcp-servers/**/__pycache__/
