fall back logic

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ Frontend/.env
 # MCP servers virtual environments
 mcp-servers/**/venv/
 mcp-servers/**/__pycache__/.planning/
+
+#md files
+planner_logic.md
